--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
   "bugs": {
     "url": "https://github.com/cesine/jsonapi-boom/issues"
   },
-  "homepage": "https://github.com/cesine/jsonapi-boom#readme"
+  "homepage": "https://github.com/cesine/jsonapi-boom#readme",
+  "dependencies": {
+    "boom": "^4.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^3.0.2"
+  }
 }
